translate and clean some codes

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -6,5 +6,195 @@
   "getStarted": "Get Started",
   "noConnection": "No Internet Connection",
   "boorConnection": "Poor Internet",
-  "serverError": "Server Error try again later"
+  "serverError": "Server Error try again later",
+  "editAddress": "Edit Address",
+  "addAnAddress": "Add an address",
+  "address": "Address",
+  "editYourDeliveryAddress":"Edit your delivery address",
+  "Add your delivery address":"Add your delivery address",
+  "Contact number":"Contact number",
+  "Phone number": "Phone number",
+  "Location":"Location",
+  "City": "City",
+  "Area":"Area",
+  "Directions": "Directions",
+  "Street name":"Street name",
+  "Building name/number": "Building name/number",
+  "Floor number":"Floor number",
+  "Save address": "Save address",
+  "Brand Photos":"Brand Photos",
+  "Brand  Profile": "Brand  Profile",
+  "Brand Name":"Brand Name",
+  "About brand experience": "About brand experience",
+  "Explore":"Explore",
+  "Collages": "Collages",
+  "Brand Collages":"Brand Collages",
+  "Products": "Products",
+  "Brand Products":"Brand Products",
+  "Photos": "Photos",
+  "Chechout":"Chechout",
+  "Delivered to": "Delivered to",
+  "Paid by": "Paid by",
+  "Credit/debit card":"Credit/debit card",
+  "Voucher": "Voucher",
+  "Apply":"Apply",
+  "Bill breakdown": "Bill breakdown",
+  "Subtotal":"Subtotal",
+  "Shipping Fees": "Shipping Fees",
+  "LE":"LE",
+  "VAT": "VAT",
+  "Total Fees":"Total Fees",
+  "Confirm order": "Confirm order",
+  "Collage Details":"Collage Details",
+  "Collage Items": "Collage Items",
+  "Collage subtotal": "Collage subtotal",
+  "Edit Collage":"Edit Collage",
+  "Confirm your email": "Confirm your email",
+  "We have sent you a OTP code, Please\\nenter it below.": "We have sent you a OTP code, Please\\nenter it below.",
+  "Confirm": "Confirm",
+  "Resend confirmation code":"Resend confirmation code",
+  "Create new password": "Create new password",
+  "Your new password must be different from\\npreviously password": "Your new password must be different from\\npreviously password",
+  "New password": "New password",
+  "Confirm  password":"Confirm  password",
+  "Create": "Create",
+  "My information":"My information",
+  "Full name*": "Full name*",
+  "Email address":"Email address",
+  "Mobile number": "Mobile number",
+  "name@example.com":"name@example.com",
+  "Category": "Category",
+  "Collage Saved Successfully":  "Collage Saved Successfully",
+  "import images first": "import images first",
+  "Already in Top":  "Already in Top",
+  "Already in Bottom": "Already in Bottom",
+  "You need to add products to editor to save collage":  "You need to add products to editor to save collage",
+  "Add products to\\ncreate your first collage": "Add products to\\ncreate your first collage",
+  "Remove":  "Remove",
+  "Nothing to remove": "Nothing to remove",
+  "Flip":  "Flip",
+  "Backward": "Backward",
+  "Forward":  "Forward",
+  "Categories": "Categories",
+  "Add to Cart": "Add to Cart",
+  "Filter": "Filter",
+  "Style":"Style",
+  "Colors": "Colors",
+  "Highest Price":"Highest Price",
+  "Lowest Price": "Lowest Price",
+  "Sort By":"Sort By",
+  "Types": "Types",
+  "Price":"Price",
+  "Click here to check your order status": "Click here to check your order status",
+  "Congrats!": "Congrats!",
+  "Your order was placed successfully": "Your order was placed successfully",
+  "Check my order": "Check my order",
+  "FORGET PASSWORD": "FORGET PASSWORD",
+  "Please enter your email address, you will\\nreceive a link to create a new password via": "Please enter your email address, you will\\nreceive a link to create a new password via",
+  "Email": "Email",
+  "SEND": "SEND",
+  "Category Products": "Category Products",
+  "Category name": "Category name",
+  "Items": "Items",
+  "Categories List": "Categories List",
+  "EGP": "EGP",
+  "Add to Editor": "Add to Editor",
+  "Free": "Free",
+  "My Cart": "My Cart",
+  "Free Items": "Free Items",
+  "Continue": "Continue",
+  "Editor": "Editor",
+  "Offers": "Offers",
+  "Top Collages": "Top Collages",
+  "Special Offers": "Special Offers",
+  "Best selling": "Best selling",
+  "My Profile": "My Profile",
+  "Full Name": "Full Name",
+  "My Collages": "My Collages",
+  "My Likes": "My Likes",
+  "My Dislikes": "My Dislikes",
+  "Settings": "Settings",
+  "My orders": "My orders",
+  "Saved addresses": "Saved addresses",
+  "Login": "Login",
+  "Logout": "Logout",
+  "LOGIN TO\\nMY ACCOUNT": "LOGIN TO\\nMY ACCOUNT",
+  "Password": "Password",
+  "Forgot Password": "Forgot Password",
+  "NEXT": "NEXT",
+  "New to app?": "New to app?",
+  "Sign up": "Sign up",
+  "Make default address": "Make default address",
+  "Default address": "Default address",
+  "Other Address": "Other Address",
+  "My address": "My address",
+  "Add New Address": "Add New Address",
+  "Order Details": "Order Details",
+  "Order status": "Order status",
+  "Order received": "Order received",
+  "Order summary": "Order summary",
+  "My Orders": "My Orders",
+  "Today": "Today",
+  "This Week": "This Week",
+  "This Month": "This Month",
+  "Notifications": "Notifications",
+  "Order Items": "Order Items",
+  "Order Address": "Order Address",
+  "Payment methods": "Payment methods",
+  "Bill Breakdown": "Bill Breakdown",
+  "Choose\\nA payment method": "Choose\\nA payment method",
+  "Cash on delivery": "Cash on delivery",
+  "With this option you will pay full amount after we deliver your order to your address": "With this option you will pay full amount after we deliver your order to your address",
+  "Card number": "Card number",
+  "Expiry date": "Expiry date",
+  "MM/YY": "MM/YY",
+  "CVV": "CVV",
+  "Cardholder name": "Cardholder name",
+  "Enter full name": "Enter full name",
+  "Save card": "Save card",
+  "Product Name": "Product Name",
+  "Add card": "Add card",
+  "Product details": "Product details",
+  "Dimension": "Dimension",
+  "Free Shipping on orders over LE 0.00\\nin 3-5 business days": "Free Shipping on orders over LE 0.00\\nin 3-5 business days",
+  "Selling by": "Selling by",
+  "Specifications": "Specifications",
+  "Material": "Material",
+  "Color": "Color",
+  "Length": "Length",
+  "Fit": "Fit",
+  "Occasion": "Occasion",
+  "Care Instructions": "Care Instructions",
+  "Similar Products": "Similar Products",
+  "CREATE\\nA NEW ACCOUNT": "CREATE\\nA NEW ACCOUNT",
+  "CREATE ACCOUNT": "CREATE ACCOUNT",
+  "Already have an account?": "Already have an account?",
+  "Sign in": "Sign in",
+  "Search": "Search",
+  "Like": "Like",
+  "Dislike": "Dislike",
+  "No Action on Item": "No Action on Item",
+  "Found Results": "Found Results",
+  "Add To Cart": "Add To Cart",
+  "No More Items": "No More Items",
+  "liked by": "liked by",
+  "others": "others",
+  "Order": "Order",
+  "Done": "Done",
+  "Successfully added to your cart": "Successfully added to your cart",
+  "Open cart": "Open cart",
+  "Choose Image From": "Choose Image From",
+  "Gallery": "Gallery",
+  "Camera": "Camera",
+  "Proceed to your cart": "Proceed to your cart",
+  "Your order was placed\\nsuccessfully": "Your order was placed\\nsuccessfully",
+  "ALERT": "ALERT",
+  "Are you Sure want to Logout?": "Are you Sure want to Logout?",
+  "Cancel": "Cancel",
+  "Save your collage": "Save your collage",
+  "Enter collage name": "Enter collage name",
+  "Save Collage": "Save Collage",
+  "What are you looking for?": "What are you looking for?",
+  "View All": "View All",
+  "yourRequestCompletedSuccessfully": "Your request completed successfully"
 }
